@@ -14,6 +14,15 @@
     <version>1.0.0</version>
   </parent>
 
+  <profiles>
+    <profile>
+      <id>java9</id>
+      <properties>
+        <junit.additionalArgLine>--add-modules java.xml.bind</junit.additionalArgLine>
+      </properties>
+    </profile>
+  </profiles>
+
   <dependencies>
 
     <dependency>
